@@ -17,6 +17,17 @@
   ],
   "changes": [
     {
+      "in": "3.6.13",
+      "since": "3.6.12",
+      "new_features": [
+      ],
+      "bug_fixes": [
+      ],
+      "other_improvements": [
+        { "num": 11995, "desc": "ActionButtons with reports shouldn't display them if report is empty" }
+      ]
+    },
+    {
       "in": "3.6.12",
       "since": "3.6.11",
       "new_features": [
@@ -41,29 +52,6 @@
         { "num": 11986, "desc": "Add missing Section size symbol to NATO markers" },
         { "num": 11957, "desc": "Spaces in GKC reports made consistent with all other reports" },
         { "num": 11935, "desc": "Allow option for only first Mouseover-stack Viewer that generates a tooltip will be drawn" }
-      ]
-    },
-    {
-      "in": "3.6.11",
-      "since": "3.6.10",
-      "new_features": [
-      ],
-      "bug_fixes": [
-        { "num": 11941, "desc": "Since 3.6.7, French/Belgian AZERTY keyboards on Mac were experiencing problems with Ctrl / Alt keys on the number key row" },
-        { "num": 11938, "desc": "IndexOutOfBoundsException trying to open a private note" },
-        { "num": 11933, "desc": "At-Start stacks were getting confused by blank boards" },
-        { "num": 11929, "desc": "Show translated module name and descriptions in Module Manager" },
-        { "num": 11924, "desc": "Reinstate translation of Player Sides" },
-        { "num": 11904, "desc": "Global Key Command fastmatch for Mats fixed to avoid trait-order bugs" },
-        { "num": 11901, "desc": "Corrected \"Mark When Moved\" documentation" },
-        { "num": 11899, "desc": "Hide FileConfigurer label in preferences dialogs" },
-        { "num": 11890, "desc": "NPE when current-stack option used on non-stacking piece" },
-        { "num": 11505, "desc": "Insert items into formatted strings from drop-down list into the correctly selected position" }
-      ],
-      "other_improvements": [
-        { "num": 11911, "desc": "Debug window shows board-relative coordinates if they are different from the map-relative ones" },
-        { "num": 11906, "desc": "MatCargo's mat detection did unnecessary computations for lack of parentheses" },
-        { "num": 11900, "desc": "Clear Tile Cache with more efficient Files.walkFileTree()" }
       ]
     }
   ]
